# qbtrs

./: Cargo.toml  README.md
src/: cli.rs  cli_handler.rs  config.rs  main.rs
src/backend/: auth.rs  global.rs  mod.rs  torrents.rs  util.rs
