[package]
name = "qbtrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["string", "derive"] }
directories = "5.0.1"
humansize = "2.1.3"
reqwest = { version = "0.11.20", features = ["blocking", "cookies", "serde_json", "json", "multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
url = { version = "2.4.1", features = ["serde"] }

[profile.release]
strip = true
lto = true
